--- a/src/style/elements/_subtitle.scss
+++ b/src/style/elements/_subtitle.scss
@@ -1,5 +1,5 @@
 .subtitle {
-    font-family: var(--font-subtitle);
+    font-family: var(--font-dinpro);
     font-size: 1rem;
     text-transform: uppercase;
     
