--- a/src/style/elements/_buttons.scss
+++ b/src/style/elements/_buttons.scss
@@ -4,6 +4,7 @@
     text-decoration: none;
     font-family: var(--font-bold);
     font-size: 1rem;
+    transition: var(--transition);
     padding: 1rem 1.5rem;
 
     &--br1 {
