--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -2,7 +2,7 @@
     .footer {
         gap: 10px;
         width: 100%;
-        background-color: var(--color-footer);
+        background-color: var(--color-middle-dark);
         font-size: .8rem;
         text-align: center;
         padding: 1.5rem 1rem;
@@ -13,7 +13,15 @@
         }
     
         svg {
+            font-size: 1.1em;
+            color: var(--color-light);
+            transition: var(--transition);
             margin-left: .7rem;
+
+            &:hover {
+                color: var(--color-bright-2);
+                margin-bottom: 5px;
+            }
         }
     }
 }
