--- a/src/style/layout/_general.scss
+++ b/src/style/layout/_general.scss
@@ -8,9 +8,10 @@
 }
 
 body {
-    line-height: 1.3 !important;
+    line-height: 1.4 !important;
     background-color: var(--color-dark) !important;
     color: var(--color-light) !important;
+    counter-reset: section;
 
     // Navigation
     &:has(> div > header > nav > div > ul.navi__links.active) {
@@ -26,6 +27,53 @@ body {
 html {
     scroll-behavior: smooth;
     font-size: 100%;
+    font-size: 15px;
+}
+
+h1, h2, h3 {
+    color: var(--color-lightest);
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+
+    &-track {
+        background: var(--color-dark);
+    }
+
+    &-thumb {
+        background-color: var(--color-light);
+        border: 3px solid var(--color-dark);
+        border-radius: 10px;
+    }
+}
+
+.hyperlink {
+    display: inline-block;
+    color: var(--color-bright-2);
+    text-decoration: none;
+    transition: var(--transition);
+
+    &:hover, &:active, &:focus {
+        color: var(--color-bright-2);
+        cursor: pointer;
+
+        &::after {
+            width: 100%;
+        }
+    }
+
+    &::after {
+        content: "";
+        display: block;
+        width: 0px;
+        height: 1px;
+        position: relative;
+        bottom: 0.37em;
+        background-color: var(--color-bright-2);
+        transition: var(--transition);
+        opacity: 0.5;
+    }
 }
 
 #root {
