--- a/src/style/layout/_navigation.scss
+++ b/src/style/layout/_navigation.scss
@@ -4,7 +4,8 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: var(--color-dark);
+    background-color: var(--color-dark-transparent);
+    backdrop-filter: blur(10px);
     padding: .5rem 1.5rem;
     z-index: 1500;
 
@@ -13,10 +14,16 @@
         margin: 0;
     }
 
-    @include breakpoint-up(md) {
-        display: flex;
-        justify-content: space-between;
-        min-height: auto;
+    &:has(.navi__links.active) {
+        background-color: var(--color-dark);
+    }
+
+    .container {
+        @include breakpoint-up(md) {
+            display: flex;
+            justify-content: space-between;
+            min-height: auto;
+        }
     }
 
     &__group {
@@ -74,7 +81,7 @@
         a {
             position: relative;
             display: block;
-            font-family: var(--font-subtitle);
+            font-family: var(--font-dinpro);
             color: var(--color-light);
             font-size: 2rem;
             text-transform: uppercase;
@@ -90,38 +97,17 @@
             }
 
             &::before {
-                content: "";
-                position: absolute;
-                display: block;
-                width: 100%;
-                height: 2px;
-                left: 0;
-                right: 0;
-                bottom: -10px;
-                background: var(--color-bright-2);
-                opacity: 0!important;
-                transition: opacity 200ms ease-in-out;
+                counter-increment: section;
+                content: "0" counter(section) ".";
+                color: var(--color-bright-1);
+                margin-right: 5px;
             }
 
-            &:not(:last-child) {
-                @include breakpoint-up(lg) {
-                    margin-right: 1.3rem;
-                }
-            }
-
-            &:hover, &.active {
-                color: var(--color-bright-2);
+            &:hover, &:active, &:focus {
+                color: var(--color-bright-2)!important;
                 cursor: pointer;
-
-                &::before {
-                    opacity: 1!important;
-                }
             }
         }
-    }
-
-    &--br1 {
-        color: var(--color-bright-1);
     }
 
     .hamburger {
