--- a/src/style/pages/_work.scss
+++ b/src/style/pages/_work.scss
@@ -17,9 +17,13 @@
 
     &__items {
         display: grid;
-        gap: 2rem;
+        gap: 3rem;
 
         @include breakpoint-up(md) {
+            gap: 5rem;
+        }
+
+        @include breakpoint-up(lg) {
             grid-template-columns: 45% 45%;
             gap: 5rem 10%;
         }
