--- a/src/style/layout/_navigation.scss
+++ b/src/style/layout/_navigation.scss
@@ -6,7 +6,7 @@
     right: 0;
     background-color: var(--color-dark-transparent);
     backdrop-filter: blur(10px);
-    padding: .5rem 1.5rem;
+    padding: .5rem 0;
     z-index: 1500;
 
     @include breakpoint-down(md) {
@@ -111,6 +111,7 @@
     }
 
     .hamburger {
+        font-size: 1.5em;
         padding: 1rem;
 
         @include breakpoint-up(md) {
