--- a/src/style/elements/_carousel.scss
+++ b/src/style/elements/_carousel.scss
@@ -4,10 +4,12 @@
     .carousel {
 
         &__age {
-            display: grid;
+            display: flex;
+            gap: 1rem;
             font-family: var(--font-bold);
 
             @include breakpoint-up(lg) {
+                display: grid;
                 width: 30%;
                 float: left;
                 align-content: center;
@@ -17,8 +19,9 @@
 
             span {
                 position: relative;
-                display: none;
                 color: hsl(0, 0%, 100%);
+                font-family: var(--font-regular);
+                opacity: .5;
                 margin-bottom: .5rem;
 
                 @include breakpoint-up(lg) {
@@ -26,9 +29,11 @@
                     align-items: center;
                     gap: 1rem;
                     width: 115%;
+                    font-family: var(--font-bold);
                     transition: transform .5s cubic-bezier(0.42, 0, 0.15, 1.4);
                     transform: scale(.9);
                     color: var(--color-light);
+                    opacity: 1;
                     margin: 0;
                 }
             }
@@ -37,13 +42,13 @@
         &__img {
             position: relative;
             height: 300px;
-            background-size: contain;
             background-position: top left;
             background-repeat: no-repeat;
-            z-index: 1;
+            background-size: auto 25px;
 
             @include breakpoint-up(md) {
                 height: 400px;
+                background-size: auto 35px;
             }
 
             @include breakpoint-up(lg) {
@@ -63,12 +68,17 @@
             }
 
             &::before {
-                width: 3.5%;
+                width: 25px;
+                top: 25px;
                 left: 0;
                 background: #304968;  
+                height: calc(100% - 25px);
+                z-index: 1;
                 
-                @include breakpoint-up(lg) {
+                @include breakpoint-up(md) {
                     width: 27px;
+                    top: 35px;
+                    height: calc(100% - 35px);
                 }
             }
 
@@ -82,6 +92,22 @@
 
             .carousel-inner {
                 height: 100%;
+
+                &::before {
+                    position: absolute;
+                    content: '1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16';
+                    height: 100%;
+                    text-align: center;
+                    width: min-content;
+                    padding-top: 30px;
+                    margin-left: 4px;
+                    z-index: 1;
+
+                    @include breakpoint-up(md) {
+                        padding: 42px 5px 0 5px;
+                        margin: 0;
+                    }
+                }
             }
 
             .carousel-item {
@@ -91,25 +117,27 @@
 
                 p {
                     width: 60%;
-                    padding-top: 33px;
-                    padding-left: 33px;
+                    padding-top: 30px;
+                    padding-left: 40px;
+
+                    @include breakpoint-up(md) {
+                        padding-top: 42px;
+                    }
                 }
 
                 img {
                     position: absolute;
                     width: 45%;
+                    max-height: 290px;
+                    max-width: 200px;
                     right: 2rem;
-                    bottom: 0;
+                    bottom: 1.5rem;
+                    object-fit: contain;
                     z-index: 10;
 
                     @include breakpoint-up(md) {
                         right: 5rem;
-                    }
-                }
-
-                &.design {
-                    img {
-                        bottom: 1rem;
+                        max-width: 350px;
                     }
                 }
             }
@@ -174,15 +202,20 @@
         }   
     }
 
+    .active-year {
+        font-family: var(--font-bold);
+        opacity: 1;
+        
+        @include breakpoint-up(lg) {
+            @include history-year;
+        }
+    }
+
     &:has(.baby.active ) {
 
         .carousel__age {
             span:first-of-type {
-                display: flex;
-                
-                @include breakpoint-up(lg) {
-                    @include history-year;
-                }
+                @extend .active-year;
             }
         }
     }
@@ -191,11 +224,7 @@
 
         .carousel__age {
             span:nth-of-type(2) {
-                display: flex;
-
-                @include breakpoint-up(lg) {
-                    @include history-year;
-                }
+                @extend .active-year;
             }
         }
     }  
@@ -204,11 +233,7 @@
 
         .carousel__age {
             span:nth-of-type(3) {
-                display: flex;
-
-                @include breakpoint-up(lg) {
-                    @include history-year;
-                }
+                @extend .active-year;
             }
         }
     }   
@@ -217,11 +242,7 @@
 
         .carousel__age {
             span:nth-of-type(4) {
-                display: flex;
-
-                @include breakpoint-up(lg) {
-                    @include history-year;
-                }
+                @extend .active-year;
             }
         }
     }   
