--- a/src/style/main.css
+++ b/src/style/main.css
@@ -86,11 +86,15 @@
   display: flow-root;
 }
 .history__carousel .carousel__age {
-  display: grid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
   font-family: var(--font-bold);
 }
 @media (min-width: 992px) {
   .history__carousel .carousel__age {
+    display: grid;
     width: 30%;
     float: left;
     -ms-flex-line-pack: center;
@@ -101,8 +105,9 @@
 }
 .history__carousel .carousel__age span {
   position: relative;
-  display: none;
   color: hsl(0deg, 0%, 100%);
+  font-family: var(--font-regular);
+  opacity: 0.5;
   margin-bottom: 0.5rem;
 }
 @media (min-width: 992px) {
@@ -115,6 +120,7 @@
             align-items: center;
     gap: 1rem;
     width: 115%;
+    font-family: var(--font-bold);
     -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.42, 0, 0.15, 1.4);
     transition: -webkit-transform 0.5s cubic-bezier(0.42, 0, 0.15, 1.4);
     transition: transform 0.5s cubic-bezier(0.42, 0, 0.15, 1.4);
@@ -122,20 +128,21 @@
     -webkit-transform: scale(0.9);
             transform: scale(0.9);
     color: var(--color-light);
+    opacity: 1;
     margin: 0;
   }
 }
 .history__carousel .carousel__img {
   position: relative;
   height: 300px;
-  background-size: contain;
   background-position: top left;
   background-repeat: no-repeat;
-  z-index: 1;
+  background-size: auto 25px;
 }
 @media (min-width: 768px) {
   .history__carousel .carousel__img {
     height: 400px;
+    background-size: auto 35px;
   }
 }
 @media (min-width: 992px) {
@@ -152,13 +159,18 @@
   height: 100%;
 }
 .history__carousel .carousel__img::before {
-  width: 3.5%;
+  width: 25px;
+  top: 25px;
   left: 0;
   background: #304968;
+  height: calc(100% - 25px);
+  z-index: 1;
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .history__carousel .carousel__img::before {
     width: 27px;
+    top: 35px;
+    height: calc(100% - 35px);
   }
 }
 .history__carousel .carousel__img::after {
@@ -171,6 +183,24 @@
 .history__carousel .carousel__img .carousel-inner {
   height: 100%;
 }
+.history__carousel .carousel__img .carousel-inner::before {
+  position: absolute;
+  content: "1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16";
+  height: 100%;
+  text-align: center;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  padding-top: 30px;
+  margin-left: 4px;
+  z-index: 1;
+}
+@media (min-width: 768px) {
+  .history__carousel .carousel__img .carousel-inner::before {
+    padding: 42px 5px 0 5px;
+    margin: 0;
+  }
+}
 .history__carousel .carousel__img .carousel-item {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -182,23 +212,30 @@
 }
 .history__carousel .carousel__img .carousel-item p {
   width: 60%;
-  padding-top: 33px;
-  padding-left: 33px;
+  padding-top: 30px;
+  padding-left: 40px;
+}
+@media (min-width: 768px) {
+  .history__carousel .carousel__img .carousel-item p {
+    padding-top: 42px;
+  }
 }
 .history__carousel .carousel__img .carousel-item img {
   position: absolute;
   width: 45%;
+  max-height: 290px;
+  max-width: 200px;
   right: 2rem;
-  bottom: 0;
+  bottom: 1.5rem;
+  -o-object-fit: contain;
+     object-fit: contain;
   z-index: 10;
 }
 @media (min-width: 768px) {
   .history__carousel .carousel__img .carousel-item img {
     right: 5rem;
+    max-width: 350px;
   }
-}
-.history__carousel .carousel__img .carousel-item.design img {
-  bottom: 1rem;
 }
 .history__carousel .carousel-control-prev, .history__carousel .carousel-control-next {
   width: 40px;
@@ -246,19 +283,18 @@
 .history__carousel .carousel-control-next:hover, .history__carousel .carousel-control-next:active {
   background-color: var(--color-bright-2) !important;
 }
-.history__carousel:has(.baby.active) .carousel__age span:first-of-type {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.history__carousel .active-year, .history__carousel:has(.job.active) .carousel__age span:nth-of-type(4), .history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3), .history__carousel:has(.design.active) .carousel__age span:nth-of-type(2), .history__carousel:has(.baby.active) .carousel__age span:first-of-type {
+  font-family: var(--font-bold);
+  opacity: 1;
 }
 @media (min-width: 992px) {
-  .history__carousel:has(.baby.active) .carousel__age span:first-of-type {
+  .history__carousel .active-year, .history__carousel:has(.job.active) .carousel__age span:nth-of-type(4), .history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3), .history__carousel:has(.design.active) .carousel__age span:nth-of-type(2), .history__carousel:has(.baby.active) .carousel__age span:first-of-type {
     color: hsl(0deg, 0%, 100%);
     -webkit-transform: scale(1);
             transform: scale(1);
     z-index: 3;
   }
-  .history__carousel:has(.baby.active) .carousel__age span:first-of-type::before {
+  .history__carousel .active-year::before, .history__carousel:has(.job.active) .carousel__age span:nth-of-type(4)::before, .history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3)::before, .history__carousel:has(.design.active) .carousel__age span:nth-of-type(2)::before, .history__carousel:has(.baby.active) .carousel__age span:first-of-type::before {
     position: absolute;
     content: "";
     height: 9px;
@@ -267,98 +303,13 @@
     border-radius: 50%;
     right: 0;
   }
-  .history__carousel:has(.baby.active) .carousel__age span:first-of-type::after {
+  .history__carousel .active-year::after, .history__carousel:has(.job.active) .carousel__age span:nth-of-type(4)::after, .history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3)::after, .history__carousel:has(.design.active) .carousel__age span:nth-of-type(2)::after, .history__carousel:has(.baby.active) .carousel__age span:first-of-type::after {
     content: "";
     height: 2px;
     width: 100%;
     background-color: hsl(0deg, 0%, 100%);
   }
 }
-.history__carousel:has(.design.active) .carousel__age span:nth-of-type(2) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-@media (min-width: 992px) {
-  .history__carousel:has(.design.active) .carousel__age span:nth-of-type(2) {
-    color: hsl(0deg, 0%, 100%);
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    z-index: 3;
-  }
-  .history__carousel:has(.design.active) .carousel__age span:nth-of-type(2)::before {
-    position: absolute;
-    content: "";
-    height: 9px;
-    width: 9px;
-    background-color: hsl(0deg, 0%, 100%);
-    border-radius: 50%;
-    right: 0;
-  }
-  .history__carousel:has(.design.active) .carousel__age span:nth-of-type(2)::after {
-    content: "";
-    height: 2px;
-    width: 100%;
-    background-color: hsl(0deg, 0%, 100%);
-  }
-}
-.history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-@media (min-width: 992px) {
-  .history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3) {
-    color: hsl(0deg, 0%, 100%);
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    z-index: 3;
-  }
-  .history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3)::before {
-    position: absolute;
-    content: "";
-    height: 9px;
-    width: 9px;
-    background-color: hsl(0deg, 0%, 100%);
-    border-radius: 50%;
-    right: 0;
-  }
-  .history__carousel:has(.cmd.active) .carousel__age span:nth-of-type(3)::after {
-    content: "";
-    height: 2px;
-    width: 100%;
-    background-color: hsl(0deg, 0%, 100%);
-  }
-}
-.history__carousel:has(.job.active) .carousel__age span:nth-of-type(4) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-@media (min-width: 992px) {
-  .history__carousel:has(.job.active) .carousel__age span:nth-of-type(4) {
-    color: hsl(0deg, 0%, 100%);
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    z-index: 3;
-  }
-  .history__carousel:has(.job.active) .carousel__age span:nth-of-type(4)::before {
-    position: absolute;
-    content: "";
-    height: 9px;
-    width: 9px;
-    background-color: hsl(0deg, 0%, 100%);
-    border-radius: 50%;
-    right: 0;
-  }
-  .history__carousel:has(.job.active) .carousel__age span:nth-of-type(4)::after {
-    content: "";
-    height: 2px;
-    width: 100%;
-    background-color: hsl(0deg, 0%, 100%);
-  }
-}
-
 .column-item {
   display: grid;
   gap: 3rem;
@@ -832,7 +783,10 @@ h1, h2, h3 {
 
 .header {
   display: grid;
-  grid-gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 100vh;
   padding: 5rem 0 4rem 0;
 }
 @media (min-width: 768px) {
@@ -844,7 +798,6 @@ h1, h2, h3 {
         -ms-flex-pack: center;
             justify-content: center;
     grid-template-columns: minmax(auto, 55%) minmax(auto, 45%);
-    min-height: 100vh;
     padding: 8rem 0;
   }
 }
@@ -866,12 +819,15 @@ h1, h2, h3 {
 }
 .header__content {
   display: grid;
-  grid-gap: 15px;
+  grid-gap: 20px;
 }
 @media (min-width: 768px) {
   .header__content {
     grid-gap: 25px;
   }
+}
+.header__content a.cbtn {
+  margin-top: 1.7rem;
 }
 .header__image {
   position: absolute;
