--- a/src/style/elements/_carousel.scss
+++ b/src/style/elements/_carousel.scss
@@ -21,7 +21,7 @@
                 position: relative;
                 color: hsl(0, 0%, 100%);
                 font-family: var(--font-regular);
-                opacity: .5;
+                opacity: .3;
                 margin-bottom: .5rem;
 
                 @include breakpoint-up(lg) {
@@ -41,7 +41,7 @@
 
         &__img {
             position: relative;
-            height: 300px;
+            height: 308px;
             background-position: top left;
             background-repeat: no-repeat;
             background-size: auto 25px;
@@ -52,7 +52,7 @@
             }
 
             @include breakpoint-up(lg) {
-                height: 450px;
+                height: 415px;
                 width: 70%;
                 float: right;
             }
@@ -83,11 +83,18 @@
             }
 
             &::after {
-                width: 35%;
-                top: 0;
+                top: 235px;
                 right: 0;
+                height: calc(100% - 235px);
+                width: 100%;
                 background: var(--color-middle-dark);
                 z-index: -1;
+
+                @include breakpoint-up(md) {
+                    top: 0;
+                    height: 100%;
+                    width: 35%;
+                }
             }
 
             .carousel-inner {
@@ -111,17 +118,18 @@
             }
 
             .carousel-item {
-                justify-content: space-between;
-                align-items: flex-start;
                 height: 100%;
 
                 p {
-                    width: 60%;
+                    white-space: pre-line;
+                    width: 100%;
                     padding-top: 30px;
-                    padding-left: 40px;
+                    padding-left: 30px;
 
                     @include breakpoint-up(md) {
+                        width: 60%;
                         padding-top: 42px;
+                        padding-left: 40px;
                     }
                 }
 
@@ -148,7 +156,7 @@
             &-prev, &-next {
                 width: 40px;
                 height: 40px;
-                top: -20px;
+                top: -27px;
                 background: var(--color-dark);
                 transition: var(--transition);
                 opacity: 1;
@@ -156,6 +164,10 @@
 
                 &::after {
                     font-size: 1rem;
+                }
+
+                @include breakpoint-up(md) {
+                    top: -20px;
                 }
 
                 &:hover, &:active, &:focus {
