--- a/src/style/layout/_general.scss
+++ b/src/style/layout/_general.scss
@@ -48,6 +48,11 @@ h1, h2, h3 {
     }
 }
 
+.container {
+    padding-left: 2rem!important;
+    padding-right: 2rem!important;
+}
+
 .hyperlink {
     display: inline-block;
     color: var(--color-bright-2);
