--- a/src/style/main.css
+++ b/src/style/main.css
@@ -107,7 +107,7 @@
   position: relative;
   color: hsl(0deg, 0%, 100%);
   font-family: var(--font-regular);
-  opacity: 0.5;
+  opacity: 0.3;
   margin-bottom: 0.5rem;
 }
 @media (min-width: 992px) {
@@ -134,7 +134,7 @@
 }
 .history__carousel .carousel__img {
   position: relative;
-  height: 300px;
+  height: 308px;
   background-position: top left;
   background-repeat: no-repeat;
   background-size: auto 25px;
@@ -147,7 +147,7 @@
 }
 @media (min-width: 992px) {
   .history__carousel .carousel__img {
-    height: 450px;
+    height: 415px;
     width: 70%;
     float: right;
   }
@@ -174,11 +174,19 @@
   }
 }
 .history__carousel .carousel__img::after {
-  width: 35%;
-  top: 0;
+  top: 235px;
   right: 0;
+  height: calc(100% - 235px);
+  width: 100%;
   background: var(--color-middle-dark);
   z-index: -1;
+}
+@media (min-width: 768px) {
+  .history__carousel .carousel__img::after {
+    top: 0;
+    height: 100%;
+    width: 35%;
+  }
 }
 .history__carousel .carousel__img .carousel-inner {
   height: 100%;
@@ -202,22 +210,19 @@
   }
 }
 .history__carousel .carousel__img .carousel-item {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   height: 100%;
 }
 .history__carousel .carousel__img .carousel-item p {
-  width: 60%;
+  white-space: pre-line;
+  width: 100%;
   padding-top: 30px;
-  padding-left: 40px;
+  padding-left: 30px;
 }
 @media (min-width: 768px) {
   .history__carousel .carousel__img .carousel-item p {
+    width: 60%;
     padding-top: 42px;
+    padding-left: 40px;
   }
 }
 .history__carousel .carousel__img .carousel-item img {
@@ -240,7 +245,7 @@
 .history__carousel .carousel-control-prev, .history__carousel .carousel-control-next {
   width: 40px;
   height: 40px;
-  top: -20px;
+  top: -27px;
   background: var(--color-dark);
   -webkit-transition: var(--transition);
   transition: var(--transition);
@@ -249,6 +254,11 @@
 }
 .history__carousel .carousel-control-prev::after, .history__carousel .carousel-control-next::after {
   font-size: 1rem;
+}
+@media (min-width: 768px) {
+  .history__carousel .carousel-control-prev, .history__carousel .carousel-control-next {
+    top: -20px;
+  }
 }
 .history__carousel .carousel-control-prev:hover, .history__carousel .carousel-control-prev:active, .history__carousel .carousel-control-prev:focus, .history__carousel .carousel-control-next:hover, .history__carousel .carousel-control-next:active, .history__carousel .carousel-control-next:focus {
   opacity: 1;
@@ -606,6 +616,11 @@ h1, h2, h3 {
   border-radius: 10px;
 }
 
+.container {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+}
+
 .hyperlink {
   display: inline-block;
   color: var(--color-bright-2);
@@ -661,6 +676,7 @@ h1, h2, h3 {
 }
 .navi:has(.navi__links.active) {
   background-color: var(--color-dark);
+  height: 100vh;
 }
 @media (min-width: 768px) {
   .navi .container {
