--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,6 +4,7 @@
 @import 'elements/_buttons';
 @import 'elements/_carousel';
 @import 'elements/_column';
+@import 'elements/_loader';
 @import 'elements/_logo';
 @import 'elements/_project';
 @import 'elements/_subtitle';
