--- a/src/style/main.css
+++ b/src/style/main.css
@@ -454,23 +454,35 @@
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   40% {
     opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   100% {
     opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 @keyframes fadeIn {
   0% {
     opacity: 0;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   40% {
     opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   100% {
     opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 .logo {
