update-file-stucture

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,22 +1,22 @@
 @font-face {
     font-family: 'dinpro';
-    src: url('/src/fonts/dinpro-bold.otf') format('opentype');
+    src: url('../../fonts/dinpro-bold.otf') format('opentype');
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'logo';
-    src: url('/src/fonts/rockwell.TTF') format('truetype');
+    src: url('../../fonts/rockwell.TTF') format('truetype');
 }
 
 @font-face {
     font-family: 'regular';
-    src: url('/src/fonts/metropolis-regular.otf') format('opentype');
+    src: url('../../fonts/metropolis-regular.otf') format('opentype');
 }
 
 @font-face {
     font-family: 'bold';
-    src: url('/src/fonts/metropolis-bold.otf') format('opentype');
+    src: url('../../fonts/metropolis-bold.otf') format('opentype');
 }
 
 :root {
